--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -19,5 +19,7 @@
         <file>gui/NavigableDialog.qml</file>
         <file>gui/CenteredGridView.qml</file>
         <file>gui/CliPair.qml</file>
+        <file>gui/LoginView.qml</file>
+        <file>gui/AutoStartSegue.qml</file>
     </qresource>
 </RCC>
