--- a/app/resources.qrc
+++ b/app/resources.qrc
@@ -76,9 +76,7 @@
         <file>languages/qml_eo.qm</file>
         <file>languages/qml_ta.ts</file>
         <file>languages/qml_ta.qm</file>
-        <!-- Don't include pt_BR until it is more complete -->
-        <!--file>languages/qml_pt_BR.qm</file-->
-        <!--file>languages/qml_pt_BR.ts</file-->
+        <file>gui/LoginView.qml</file>
     </qresource>
     <qresource prefix="/data">
         <file alias="gamecontrollerdb.txt">SDL_GameControllerDB/gamecontrollerdb.txt</file>
@@ -97,5 +95,6 @@
         <file alias="d3d11_ayuv_pixel.fxc">shaders/d3d11_ayuv_pixel.fxc</file>
         <file alias="d3d11_y410_pixel.fxc">shaders/d3d11_y410_pixel.fxc</file>
         <file alias="vt_renderer.metal">shaders/vt_renderer.metal</file>
+        <file>gui/AutoStartSegue.qml</file>
     </qresource>
 </RCC>
